initiate add support 1.21, rework of plugin